--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-app",
   "version": "0.1.0",
@@ -7,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "git-hash-package": "^1.0.6",
+    "git-repo-version": "^1.0.2",
+    "i": "^0.3.7",
     "jest-dom": "^4.0.0",
+    "npm": "^8.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-git-info": "^2.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-test-render": "^1.1.2",
